--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -5,3 +5,34 @@
     <meta charset="UTF-8">
     <title>Basic Website</title>
 </head>
+<header>
+    <h1>About TechCon 2024</h1>
+    <nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/schedule.html">Schedule</a></li>
+            <li><a href="/register.html">Register</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+<article>
+ <h2>History</h2>   
+ <p>This section talks about the history of the event</p>
+ <img src="https://pixabay.com/photos/keyboard-keys-logitech-rgb-7913431/" alt="Image 1: keyboard-keys-logitech-rgb-7913431">
+</article>
+<article>
+    <h2>Mission </h2>
+        <p>This section looks at the mission behind the event</p>
+        <img src="https://pixabay.com/photos/keyboard-keys-logitech-rgb-7913431/" alt="Image 2: keyboard-keys-logitech-rgb-7913431">
+</article>
+<article>
+ <h2>Past Speakers </h2>
+        <p>This section looks at past speakers of the event</p>
+     <img src="https://pixabay.com/photos/keyboard-keys-logitech-rgb-7913431/" alt="Image 3: keyboard-keys-logitech-rgb-7913431">
+</article>
+</main>
+<footer>
+    <p>&copy; Copyright TechCon 2024. All Rights Reserved</p>
+</footer>
