--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -5,3 +5,41 @@
     <meta charset="UTF-8">
     <title>Basic Website</title>
 </head>
+<header>
+    <h1>Schedule for TechCon 2024</h1>
+    <nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/register.html">Register</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+</header>
+<main>
+    <table>
+        <caption>Speaker Sessions</caption>
+        <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
+        </tr>
+        <tr>
+            <td>09:00am</td>
+            <td>Session 1</td>
+            <td>Speaker 1</td>
+        </tr>
+        <tr>
+            <td>10:00am</td>
+            <td>Session 2</td>
+            <td>Speaker 2</td>
+        </tr>
+        <tr>
+            <td>11:00am</td>
+            <td>Session3</td>
+            <td>Speaker 3</td>
+        </tr>
+    </table>
+</main>
+<footer>
+    <p>&copy; Copyright TechCon 2024. All Rights Reserved</p>
+</footer>
