--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -5,3 +5,11 @@
     <meta charset="UTF-8">
     <title>Basic Website</title>
 </head>
+
+<nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/schedule.html">Schedule</a></li>
+            <li><a href="/register.html">Register</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
