--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -17,7 +17,7 @@
 </header>
 <main>
     <table>
-        <caption>Speaker Sessions</caption>
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <tr>
             <th scope="col">Time</th>
             <th scope="col">Session</th>
