--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -41,5 +41,5 @@
     </table>
 </main>
 <footer>
-    <p>&copy; Copyright TechCon 2024. All Rights Reserved</p>
+    <p>&copy; copyright TechCon 2024. All Rights Reserved</p>
 </footer>
