--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -5,11 +5,31 @@
     <meta charset="UTF-8">
     <title>Basic Website</title>
 </head>
+<header>
+    <h1>Register for TechCon 2024</h1>
 
-<nav>
+    <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/schedule.html">Schedule</a></li>
-            <li><a href="/register.html">Register</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
+    </nav>
+</header>
+<main>
+    <form>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="example@domain.com" />
+        <label for="password">Email:</label>
+        <input type="password" id="password" name="password" placeholder="password" /> 
+        <label for="checkbox">Email:</label>
+        <input type="checkbox" id="checkbox" name="checkbox" placeholder="checkbox" />
+        <button type="submit">Register Now</button>
+    </form>
+</main>
+<footer>
+    <p>&copy; copyright TechCon 2024. All Rights Reserved</p>
+</footer>
