--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -14,6 +14,7 @@
             <li><a href="/register.html">Register</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
+    </nav>
 </header>
 <main>
     <table>
