--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -5,11 +5,39 @@
     <meta charset="UTF-8">
     <title>Basic Website</title>
 </head>
-
-<nav>
+<header>
+    <h1>Contact Us</h1>
+    <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/schedule.html">Schedule</a></li>
             <li><a href="/register.html">Register</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/about.html">About</a></li>
         </ul>
+    </nav>
+</header>
+<main>
+    <ul>
+        <li><a href="mailto:email@example.com">Email</a> </li>
+        <li><a href="https://ehub.alxafrica.com/">Social Media</a></li>
+        <li><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8594921458366!2d36.79367077372744!3d-1.2561461355913288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17002dc90869%3A0xe743a176c7687ca0!2sALX%20Kenya%20-%20The%20Piano!5e0!3m2!1sen!2ske!4v1752860576105!5m2!1sen!2ske"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>The Piano</a></li>
+    </ul>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="example@domain.com" />
+
+        <label for="message">message:</label>
+        <textarea id="message"></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
+</main>
+<footer>
+    <p>&copy; copyright TechCon 2024. All Rights Reserved</p>
+</footer>
