--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -19,7 +19,7 @@
 <main>
     <ul>
         <li><a href="mailto:email@example.com">Email</a> </li>
-        <li><a href="https://ehub.alxafrica.com/">Social Media</a></li>
+        <li><a href="https://ehub.alxafrica.com/" target="_blank">Social Media</a></li>
         <li><iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8594921458366!2d36.79367077372744!3d-1.2561461355913288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17002dc90869%3A0xe743a176c7687ca0!2sALX%20Kenya%20-%20The%20Piano!5e0!3m2!1sen!2ske!4v1752860576105!5m2!1sen!2ske"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
